feat:add carpet core config & move some function to config load stage